--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "lodash": "^4.17.11",
     "massive": "^5.7.7",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
