--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "server/index.js",
   "proxy": "http://localhost:6556",
   "dependencies": {
-    "axios": "^0.18.0",
-    "bcrypt": "^3.0.4",
+    "axios": "^0.18.1",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "massive": "^5.7.7",
+    "massive": "^6.2.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.4.0",
     "redux": "^4.0.1"
   },
   "scripts": {
