--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "massive": "^6.2.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.4.0",
-    "redux": "^4.0.1"
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
