--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.1",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.18.3",
+    "cron": "^1.8.2",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
